[project]
name = "LGSA"
version = "0.1.0"
description = "A Python package for solving the Capacitated Vehicle Routing Problem (CVRP) using Proximal Policy Optimization (PPO)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "glob2>=0.7",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "ortools>=9.12.4544",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "tqdm>=4.67.1",
    "vrplib>=1.5.1",
    "wandb>=0.19.9",
    "torch==2.9.1", 
    "torchvision>=0.24.1",
    "torchaudio>=2.9.1",
    "torch-geometric>=2.7.0",
    "py7zr>=1.0.0",
]

# UV configuration for PyTorch with CUDA 13.0
[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

# Declaration of the PyTorch index for CUDA 13.0
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true  # Use this index only for PyTorch
